--- a/css/z_css/head.css
+++ b/css/z_css/head.css
@@ -1,9 +1,14 @@
 /* 头部 */
+body{
+	background-color: #333;
+}
 #z_head{
-    background-color: #444;
+	background-color: #444;
+	min-width:1320px;
 }
 .z_header{
-    width: 1200px;
+	width: 1200px;
+	background-color: #444;
     margin: 0 auto;
 }
 .z_header .z_cont li{
@@ -72,14 +77,17 @@
 	position: fixed;
 	left: 0;
 	top: 0;
-	z-index: 999;
+	z-index: 9999;
 }
 /* nav */
 #z_nav{
 	background-color: #333;
+	width: 100%;
+	min-width:1320px;
 }
 .z_subnav{
 	width: 1200px;
+	background-color: #333;
 	margin: 0 auto;
 }
 .z_subnav .nav li{
