--- a/sass/z_srdz.scss
+++ b/sass/z_srdz.scss
@@ -112,6 +112,7 @@
         .tips{
             text-align: center;
             margin-top:12px; 
+            height: 28px;
             span{
                 display: inline-block;
                 padding: 5px 10px;
@@ -121,6 +122,7 @@
             }
         }
         a{
+            margin-top: 10px;
             display: block;
             .list_img{
                 width: 180px;
