--- a/css/c_css/c_index.css
+++ b/css/c_css/c_index.css
@@ -146,7 +146,11 @@
     background: #e83632;
     margin-right: 15px;
     text-align: center
+    
 }
+
+
+
 
 .daoshu span{
     display: inline-block;
@@ -154,6 +158,9 @@
     height: 40px;
     background: white;
     margin-top: 20px;
+    line-height: 40px;
+    font-size: 16px;
+    font-weight: bold
 }
 
 .daoshu a{
@@ -312,7 +319,7 @@
 }
 .c_dn>div>a p:nth-of-type(1){
     margin-top: 10px;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
     font-size: 16px;
 
 }
