--- a/css/z_css/raise.css
+++ b/css/z_css/raise.css
@@ -15,11 +15,16 @@
 }
 
 #z_banner {
+  background-color: #fff;
+  width: 100%;
+  min-width: 1320px;
+}
+#z_banner .z_banner1 {
   margin: 0 auto;
   width: 1200px;
   position: relative;
 }
-#z_banner .btn {
+#z_banner .z_banner1 .btn {
   display: inline-block;
   width: 12px;
   height: 12px;
@@ -31,27 +36,32 @@
 }
 
 #z_container {
+  background-color: #fff;
+  width: 100%;
+  min-width: 1320px;
+}
+#z_container .z_container1 {
   margin: 60px auto 0;
   width: 1200px;
   border: 1px solid #dedede;
 }
-#z_container:hover {
+#z_container .z_container1:hover {
   box-shadow: 5px 5px 5px rgba(214, 198, 198, 0.5);
 }
-#z_container .joinRaise {
+#z_container .z_container1 .joinRaise {
   width: 608px;
   height: 447px;
   margin-right: 15px;
   margin-top: 20px;
 }
-#z_container .joinRaise .joinRaise_top .span1 {
+#z_container .z_container1 .joinRaise .joinRaise_top .span1 {
   float: left;
   font-size: 24px;
 }
-#z_container .joinRaise .joinRaise_top .span1 a {
+#z_container .z_container1 .joinRaise .joinRaise_top .span1 a {
   color: #333;
 }
-#z_container .joinRaise .joinRaise_top .span2 {
+#z_container .z_container1 .joinRaise .joinRaise_top .span2 {
   float: right;
   height: 30px;
   line-height: 30px;
@@ -62,82 +72,82 @@
   background-color: #e2231a;
   border-radius: 15px;
 }
-#z_container .joinRaise .joinRaise_top .span2 a {
+#z_container .z_container1 .joinRaise .joinRaise_top .span2 a {
   color: #fff;
 }
-#z_container .joinRaise .details {
+#z_container .z_container1 .joinRaise .details {
   margin-top: 20px;
   line-height: 17px;
 }
-#z_container .joinRaise .border {
+#z_container .z_container1 .joinRaise .border {
   border-top: 3px solid red;
   border-bottom: 3px solid red;
   border-radius: 3px;
   margin-top: 40px;
 }
-#z_container .joinRaise .raiseInfor {
+#z_container .z_container1 .joinRaise .raiseInfor {
   margin-top: 27px;
   padding-bottom: 34px;
   border-bottom: 1px solid #dedede;
 }
-#z_container .joinRaise .raiseInfor dl {
+#z_container .z_container1 .joinRaise .raiseInfor dl {
   float: left;
   padding-right: 60px;
   text-align: center;
 }
-#z_container .joinRaise .raiseInfor dl:last-child {
+#z_container .z_container1 .joinRaise .raiseInfor dl:last-child {
   padding-right: 0;
 }
-#z_container .joinRaise .raiseInfor dl dt {
+#z_container .z_container1 .joinRaise .raiseInfor dl dt {
   font-size: 22px;
   color: #333;
 }
-#z_container .joinRaise .raiseInfor dl dd {
+#z_container .z_container1 .joinRaise .raiseInfor dl dd {
   font-size: 14px;
   color: #b5b5b5;
 }
-#z_container .joinRaise .comments {
+#z_container .z_container1 .joinRaise .comments {
   overflow: hidden;
 }
-#z_container .joinRaise .comments .comments_r {
+#z_container .z_container1 .joinRaise .comments .comments_r {
   margin-top: 15px;
   float: left;
 }
-#z_container .joinRaise .comments .comments_r dl {
+#z_container .z_container1 .joinRaise .comments .comments_r dl {
   margin-bottom: 27px;
 }
-#z_container .joinRaise .comments .comments_r dl dt {
+#z_container .z_container1 .joinRaise .comments .comments_r dl dt {
   overflow: hidden;
   height: 40px;
   line-height: 40px;
 }
-#z_container .joinRaise .comments .comments_r dl dt img {
+#z_container .z_container1 .joinRaise .comments .comments_r dl dt img {
   width: 40px;
   border-radius: 50%;
 }
-#z_container .joinRaise .comments .comments_r dl dt span {
+#z_container .z_container1 .joinRaise .comments .comments_r dl dt span {
   padding-left: 10px;
   display: inline-block;
   height: 40px;
   line-height: 40px;
   font-size: 18px;
 }
-#z_container .joinRaise .comments .comments_r dl dt i {
+#z_container .z_container1 .joinRaise .comments .comments_r dl dt i {
   padding-left: 10px;
   display: inline-block;
   height: 40px;
   line-height: 40px;
   color: #b5b5b5;
 }
-#z_container .joinRaise .comments .comments_r dl dd {
+#z_container .z_container1 .joinRaise .comments .comments_r dl dd {
   font-size: 16px;
   padding-left: 50px;
 }
-#z_container .joinRaise .comments .more_comments {
+#z_container .z_container1 .joinRaise .comments .more_comments {
   float: right;
   margin-top: 19px;
 }
-#z_container .joinRaise .comments .more_comments a {
+#z_container .z_container1 .joinRaise .comments .more_comments a {
   font-size: 16px;
   color: red;
 }
