--- a/css/x_css/x_index01.css
+++ b/css/x_css/x_index01.css
@@ -340,22 +340,25 @@
 }
 .x_two{
     position: absolute;
-    left: 0;
-    height: 0;;
+    left: 16px;
+    height: 0;
     display: none;
     opacity: 0; 
     width: 188px;
-    height: 358px;
-    padding: 70px 40px 70px 50px ;
+    height: 378px;
+    padding: 70px 40px 30px 50px ;
     background: #3aa773;     
 }
 .x_two h3{
     font-size: 20px;
     color: #ffffff;
+    text-align:center;
+
 }
 .x_two h5{
     padding: 24px;
     font-size: 14px;
+    text-align:center;
     color: #ffffff;
 }
 .x_two p{
@@ -363,10 +366,13 @@
     padding-left: 20px;
     font-size: 16px;
     color: #ffffff; 
+    text-align:center;
+
 }
 .x_two span{
     padding: 14px 58px;
-    margin-top: 40px;
+    display:block;
+    margin-top: 60px;
     border: 1px solid #ffffff;
     color: #ffffff;
     font-size: 14px;
